--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .Header {
 	display: flex;
 	justify-content: space-between;
-	padding: 16px 128px;
+	padding: 0 128px;
 	background: #213B82;
 	color: white;
 }
@@ -37,40 +37,6 @@
 .Navigation {
 	display: flex;
 	justify-content: flex-end;
+	align-items: center;
 	list-style: none;
-	margin-bottom: -20px;
-}
-
-.Navigation__link {
-	position: relative;
-	display: block;
-	text-transform: uppercase;
-	text-decoration: none;
-	color: #424242;
-	font-size: 20px;
-	padding: 8px 16px;
-	border: 4px solid transparent;
-}
-
-.Navigation__link::after {
-	position: absolute;
-	top: 100%;
-	left: 0;
-	content: "";
-	width: 0;
-	height: 4px;
-	background: #fff;
-	-webkit-transition: width .3s linear;
-	transition: width .3s linear;
-}
-
-.Navigation__link--active {
-	border-color: #424242;
-	color: #424242;
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-}
-
-.Navigation__link--active::after {
-	width: 100%;
 }
