--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -2,5 +2,28 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: inherit;
+    align-items: stretch;
+    margin: 64px 288px;
+}
+
+.MainPage__title {
+    padding: 0 16px;
+}
+
+.PanelElement {
+    margin: 0 48px 16px;
+    font-size: 16px;
+    line-height: 2em;
+}
+
+.PanelElement--code {
+    background: #F6F8FA;
+}
+
+.PanelCode {
+    margin: 0 48px 16px;
+    padding: 16px 32px;
+    font-size: 16px;
+    line-height: 2em;
+    background: #F6F8FA;
 }
