--- a/src/components/ContactPage/ContactPage.scss
+++ b/src/components/ContactPage/ContactPage.scss
@@ -4,11 +4,11 @@
     justify-content: center;
     align-items: stretch;
     margin: 64px 288px;
-}
 
-.ContactPage__title {
-    padding: 0 16px;
-    font-size: 42px;
+    &__title {
+        padding: 0 16px;
+        font-size: 42px;
+    }
 }
 
 .logo {
@@ -19,21 +19,26 @@
 }
 
 .twitterLogo {
+    @extend .logo;
     background-color: deepskyblue;
 }
 
 .mailLogo {
+    @extend .logo;
     background-color: crimson;
 }
 
 .facebookLogo {
+    @extend .logo;
     background-color: mediumblue;
 }
 
 .linkedinLogo {
+    @extend .logo;
     background-color: darkblue;
 }
 
 .githubLogo {
+    @extend .logo;
     background-color: black;
 }
