--- a/src/components/DatePicker/DatePicker.scss
+++ b/src/components/DatePicker/DatePicker.scss
@@ -1,9 +1,9 @@
 .DateCollection {
     display: flex;
-}
 
-.DateCollection:hover {
-    cursor: pointer;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .DateForm {
@@ -19,27 +19,31 @@
     color: #B2B5BA;
     text-transform: uppercase;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.75);
+
+    &--white {
+        position: relative;
+        background: #fff;
+
+            
+        &:before {
+            left: 0%;
+            top: 50%;
+            border: solid transparent;
+            content: " ";
+            height: 0;
+            width: 0;
+            position: absolute;
+            pointer-events: none;
+            border-color: rgba(144, 146, 150, 0);
+            border-left-color: #909296;
+            border-width: 12px;
+            margin-top: -12px;
+        }
+    }
+
 }
 
-.DateForm--white {
-    position: relative;
-    background: #fff;
-}
 
-.DateForm--white:before {
-    left: 0%;
-    top: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: rgba(144, 146, 150, 0);
-    border-left-color: #909296;
-    border-width: 12px;
-    margin-top: -12px;
-}
 
 .DateInput {
     width: 100%;
